Fix many sonarlint issues