@@ -14,7 +14,6 @@ import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.servlet.ModelAndView;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Controller
 @RequestMapping("/users")
@@ -73,6 +72,6 @@ public class UserListController {
         Authentication authentication = SecurityContextHolder.getContext().getAuthentication();
         return users.parallelStream()
                 .filter(u -> !u.isSuperAdmin() && !u.getUsername().equals(authentication.getName()))
-                .collect(Collectors.toList());
+                .toList();
     }
 }
